--- a/Talanga.html
+++ b/Talanga.html
@@ -898,6 +898,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script> 
+    <script src="leaflet-measure.js"></script>
     <script src="Control.MiniMap.js"></script>
     <script src="leaflet-panel-layers.js"></script>
     <script src="leaflet-providers.js"></script>
