agregar elementos HTML e imagen para logo

--- a/Islas_Bahia.html
+++ b/Islas_Bahia.html
@@ -44,6 +44,19 @@
         </form>
     
     </header>
+    <div class="login-form-container">
+        <i class="fas fa-times" id="form-close"></i> 
+        <form action="">
+            <h3>login</h3>
+            <input type="email" class="box" placeholder="Ingresa tu Email">
+            <input type="password" class="box" placeholder="Ingresa tu contraseña">
+            <input type="submit" value="login now" class="btn">
+            <input type="checkbox" id="remember">
+            <label for="remember">Recordar.</label>
+            <p>Olividastes la contraseña? <a href="#">Click aqui</a></p>
+            <p>No tienes una cuenta? <a href="#">registrate aqui.</a></p>
+        </form>   
+    </div>
 
 
 
