cambios a los elementos web

--- a/Islas_Bahia.html
+++ b/Islas_Bahia.html
@@ -57,7 +57,61 @@
             <p>No tienes una cuenta? <a href="#">registrate aqui.</a></p>
         </form>   
     </div>
+    <div class="conteiner-welcome">
+        <div class="contenedor-img">
+                <img src="Fondo_Islas_bahia.jpg" alt="Geoturismo">
+        </div>
+        <div class="contenedor-texto">
+        <h2 class="titulo">
+        <span class="typed"></span> 
+        </h2> 
+         <div class="titulo" id="cadenas-texto">
+        <p>Bienvenido a <i class="mascota">Islas de la Bahia.</i></p>
+        <p><i class="mascota">Mapeo turistico.</i></p> 
+        </div>  
+        <p class="parrafo">Conoce un poco del Dept de Islas de la bahia y ve los atractivos turisticos que ofrece este bella isla, ubicado en el mar caribe.</p>
+        <a href="#" class="btn-link activo">Visitanos</a>
+        <a href="#" class="btn-link">Geportal web.</a>
+        </div>
+    </div>
+    <section class="informacion">
+        <h1 class="heading">
+            <span>I</span>
+            <span>s</span>
+            <span>l</span>
+            <span>a</span>
+            <span>s</span>
+            <br> <br>
+            <span>d</span>
+            <span>e</span>
+            <br> <br>
+            <span>l</span>
+            <span>a</span>
+            <br> <br>
+            <span>B</span>
+            <span>a</span>
+            <span>h</span>
+            <span>i</span>
+            <span>a</span>     
+        </h1>
+          <article>
+              <h2>Departamento de Islas de la Bahia</h2>
+              <p>
+                El archipiélago de Islas de la Bahía está situado en el Golfo de Honduras y es uno de los dieciocho departamentos de la división político-administrativa de esta nación centroamericana.
 
+                El archipiélago de Islas de la Bahía, está formado por tres islas mayores que son Utila, Roatán y Guanaja, más las tres pequeñas islas de Barba reta, Morat y Santa Elena, y más de 60 cayos, situados a tan sólo 10 y 40 millas de la parte continental de Honduras en el Mar Caribe <br>
+              </p>
+          </article>
+          <article>
+            <h2>Municipio de Roatán</h2>
+            <p>
+                Roatán es una isla tropical bastante pequeña que se encuentra en el Mar Caribe, cerca de la costa de Honduras. Roatán, además, es la isla más grande del archipiélago de las Islas de la Bahía.
+                <br>
+                Es uno de los sitios turisticos mas importantes de Honduras en el siguiente mapa vamos a mostrar los limites administrativos de Islas de la bahia, y los puntos mas importantes segun los turistas.
+            </p>
+        </article>
+    </section>
+ 
 
 
     <script src="https://unpkg.com/scrollreveal"></script>
