cambios al html de islas de las bahía

--- a/Islas_Bahia.html
+++ b/Islas_Bahia.html
@@ -111,6 +111,115 @@
             </p>
         </article>
     </section>
+    <div class="Mapafinal">
+    <div class="Mapafinaldata">
+            <div class="resumen">
+            <h2>7 puntos turisticos mas importantes Islas de la Bahia</h2>
+            <p>
+                Ubicacion de elementos turisticos mas importantes segun las fuentes estadisticas, en el bello Dept de Islas de la Bahia.
+            </p>
+            </div>
+            <div class="contenido">
+                <div class="contenido-informacion">
+                <h3>Ubicacion de Interes turisticos</h3>
+                <form id="form">
+                    <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Centros turisticos" />
+                    <button type="submit">Mira el Mapa.</button>
+                </form> 
+                </div>
+                <div class="contenido-imagen">
+                    <img src="destino.png" alt="IMG1">
+                </div>
+            </div> 
+            <div class="contenido">
+                <div class="contenido-informacion">
+                <h3>Coxen Hole</h3>
+                <form id="form">
+                    <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Hoteles"/>
+                    <button type="submit">Mira el Mapa.</button>
+                </form>
+                </div>
+                <div class="contenido-imagen">
+                    <img src="Coxen Hole.PNG" alt="IMG1">
+                </div>
+            </div> 
+            <div class="contenido">
+                <div class="contenido-informacion">
+                <h3>West Bay</h3>
+                <form id="form">
+                    <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Centros turisticos" />
+                    <button type="submit">Mira el Mapa.</button>
+                </form>
+                </div>
+                <div class="contenido-imagen">
+                    <img src="West Bay.PNG" alt="IMG1">
+                </div>
+            </div> 
+            <div class="contenido">
+                <div class="contenido-informacion">
+                <h3>West End</h3>
+                <form id="form">
+                    <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Mercados" />
+                    <button type="submit">Mira el Mapa.</button>
+                </form>
+                </div>
+                <div class="contenido-imagen">
+                    <img src="West End.PNG" alt="IMG1">
+                </div>
+            </div> 
+            <div class="contenido">
+                <div class="contenido-informacion">
+                <h3>Punta Gorda.</h3>
+                <form id="form">
+                    <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Gasolineras"/>
+                    <button type="submit">Mira el Mapa.</button>
+                </form>
+                </div>
+                <div class="contenido-imagen">
+                    <img src="Punta Gorda.PNG" alt="IMG1">
+                </div>
+            </div>
+            <div class="contenido">
+            <div class="contenido-informacion">
+            <h3>Dreamercharters.</h3>
+            <form id="form">
+                <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Gasolineras"/>
+                <button type="submit">Mira el Mapa.</button>
+            </form>
+            </div>
+            <div class="contenido-imagen">
+                <img src="Dreamerchaters.PNG" alt="IMG1">
+            </div>
+            </div> 
+           <div class="contenido">
+            <div class="contenido-informacion">
+            <h3>Jardín Botánico de Carambola.</h3>
+            <form id="form">
+                <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Gasolineras"/>
+                <button type="submit">Mira el Mapa.</button>
+            </form>
+            </div>
+            <div class="contenido-imagen">
+                <img src="Jadin la carambola.PNG" alt="IMG1">
+            </div>
+           </div> 
+           <div class="contenido">
+            <div class="contenido-informacion">
+            <h3>Isla de Santa Elena.</h3>
+            <form id="form">
+                <input type="text" name="Turismo" class="input" id="Turismo" placeholder="Gasolineras"/>
+                <button type="submit">Mira el Mapa.</button>
+            </form>
+            </div>
+            <div class="contenido-imagen">
+                <img src="Isla Santa Elena.PNG" alt="IMG1">
+            </div>
+          </div> 
+
+    </div>
+    <div class="map2" id="map2"></div>
+    </div> 
+
  
 
 
@@ -131,5 +240,5 @@
     <script src="Dept_Islas_Bahia.js"></script>
     <script src="Islas_Bahia_map.js"></script> 
     
-</body>
+</div>
 </html>
