agregar islas de la bahia al html

--- a/Inicio.html
+++ b/Inicio.html
@@ -136,7 +136,7 @@
                     <i class="far fa-star"></i>
                 </div>
                 <div class="price">Mapa turistico<span></span> </div>
-                <a href="#" class="btn">Mira mas</a>
+                <a href="Islas_Bahia.html" class="btn">Mira mas</a>
             </div>
         </div>
 
@@ -336,7 +336,7 @@
             <div class="content">
                 <h3>Conoce Honduras.</h3>
                 <p>Mira informacion y el mapa de tu zona de interes.</p>
-                <a href="#" class="btn">mira mas aqui.</a>
+                <a href="Islas_Bahia.html" class="btn">mira mas aqui.</a>
             </div>
         </div>
         <div class="box">
