--- a/Islas_Bahia.html
+++ b/Islas_Bahia.html
@@ -111,6 +111,15 @@
             </p>
         </article>
     </section>
+    <div class="localizacion">
+    <div class="localizacion-resumen"> 
+        <h1>Presiona aqui para ver tu localizacion</h1>
+        <p id="parrafo" class="parrafo_javascript"></p>
+    </div>
+    <div class="icono" id="icono">
+    <ion-icon name="locate-outline" id="Icono_map"></ion-icon> 
+    </div>
+    </div>
     <div class="Mapafinal">
     <div class="Mapafinaldata">
             <div class="resumen">
@@ -216,7 +225,8 @@
             </div>
           </div> 
     </div>
-    <div class="map2" id="map2"></div>
+    <div class="map2" id="map2">
+    </div>
     </div>  
 
     <section class="footer">
@@ -252,6 +262,8 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script> 
